# gptpy

./: .gitignore  .todo  pyproject.toml
gptpy/: main.py
