[tool.poetry]
name = "gptpy"
version = "0.1.1"
description = "Interface with ChatGPT and DallE through python."
authors = ["Hector Brown <hectorjbrown@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.26.5"
argparse = "^1.4.0"
appdirs = "^1.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gpt = "gptpy.main:gpt"
dalle = "gptpy.main:dalle"
